// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Switch" renders (dark theme) 1`] = `
<div
  css={[Function]}
>
  <div
    css={
      {
        "display": "inline-block",
        "position": "relative",
        "textAlign": "left",
        "userSelect": "none",
        "verticalAlign": "middle",
        "width": "42px",
      }
    }
  >
    <input
      checked={false}
      css={
        {
          "display": "none",
        }
      }
      id="3"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      css={
        {
          "borderRadius": "20px",
          "cursor": "pointer",
          "display": "block",
          "margin": 0,
          "overflow": "hidden",
        }
      }
      htmlFor="3"
    >
      <span
        css={
          {
            "&:after": {
              "content": "" "",
              "paddingRight": "10px",
              "textAlign": "right",
            },
            "&:before": {
              "content": "" "",
              "paddingLeft": "10px",
            },
            "&:before, &:after": {
              "backgroundColor": "#d2d2d2",
              "boxSizing": "border-box",
              "display": "block",
              "float": "left",
              "height": "25px",
              "lineHeight": "25px",
              "padding": 0,
              "width": "50%",
            },
            "display": "block",
            "marginLeft": "-100%",
            "transition": "margin 0.1s ease-in 0s",
            "width": "200%",
          }
        }
      />
      <span
        css={
          {
            "background": "#fff",
            "borderRadius": "100%",
            "bottom": 0,
            "boxShadow": "0px 0px 2px -1px gray",
            "display": "block",
            "height": "23px",
            "margin": "1px",
            "opacity": undefined,
            "position": "absolute",
            "right": "17px",
            "top": 0,
            "transition": "all 0.15s ease-in 0s",
            "width": "23px",
          }
        }
      />
    </label>
  </div>
</div>
`;

exports[`"Switch" renders checked 1`] = `
<div
  css={[Function]}
>
  <div
    css={
      {
        "display": "inline-block",
        "position": "relative",
        "textAlign": "left",
        "userSelect": "none",
        "verticalAlign": "middle",
        "width": "42px",
      }
    }
  >
    <input
      checked={true}
      css={
        {
          "display": "none",
        }
      }
      id="2"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      css={
        {
          "borderRadius": "20px",
          "cursor": "pointer",
          "display": "block",
          "margin": 0,
          "overflow": "hidden",
        }
      }
      htmlFor="2"
    >
      <span
        css={
          {
            "&:after": {
              "content": "" "",
              "paddingRight": "10px",
              "textAlign": "right",
            },
            "&:before": {
              "content": "" "",
              "paddingLeft": "10px",
            },
            "&:before, &:after": {
              "backgroundColor": "#0772de",
              "boxSizing": "border-box",
              "display": "block",
              "float": "left",
              "height": "25px",
              "lineHeight": "25px",
              "padding": 0,
              "width": "50%",
            },
            "display": "block",
            "marginLeft": 0,
            "transition": "margin 0.1s ease-in 0s",
            "width": "200%",
          }
        }
      />
      <span
        css={
          {
            "background": "#fff",
            "borderRadius": "100%",
            "bottom": 0,
            "boxShadow": "0px 0px 2px -1px gray",
            "display": "block",
            "height": "23px",
            "margin": "1px",
            "opacity": undefined,
            "position": "absolute",
            "right": "0px",
            "top": 0,
            "transition": "all 0.15s ease-in 0s",
            "width": "23px",
          }
        }
      />
    </label>
  </div>
</div>
`;

exports[`"Switch" renders disabled 1`] = `
<div
  css={[Function]}
>
  <div
    css={
      {
        "display": "inline-block",
        "position": "relative",
        "textAlign": "left",
        "userSelect": "none",
        "verticalAlign": "middle",
        "width": "42px",
      }
    }
  >
    <input
      checked={false}
      css={
        {
          "display": "none",
        }
      }
      disabled={true}
      id="4"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      css={
        {
          "borderRadius": "20px",
          "cursor": "",
          "display": "block",
          "margin": 0,
          "overflow": "hidden",
        }
      }
      htmlFor="4"
    >
      <span
        css={
          {
            "&:after": {
              "content": "" "",
              "paddingRight": "10px",
              "textAlign": "right",
            },
            "&:before": {
              "content": "" "",
              "paddingLeft": "10px",
            },
            "&:before, &:after": {
              "backgroundColor": "rgb(228, 228, 228)",
              "boxSizing": "border-box",
              "display": "block",
              "float": "left",
              "height": "25px",
              "lineHeight": "25px",
              "padding": 0,
              "width": "50%",
            },
            "display": "block",
            "marginLeft": "-100%",
            "transition": "margin 0.1s ease-in 0s",
            "width": "200%",
          }
        }
      />
      <span
        css={
          {
            "background": "#fff",
            "borderRadius": "100%",
            "bottom": 0,
            "boxShadow": "0px 0px 2px -1px gray",
            "display": "block",
            "height": "23px",
            "margin": "1px",
            "opacity": 0.7,
            "position": "absolute",
            "right": "17px",
            "top": 0,
            "transition": "all 0.15s ease-in 0s",
            "width": "23px",
          }
        }
      />
    </label>
  </div>
</div>
`;

exports[`"Switch" renders unchecked 1`] = `
<div
  css={[Function]}
>
  <div
    css={
      {
        "display": "inline-block",
        "position": "relative",
        "textAlign": "left",
        "userSelect": "none",
        "verticalAlign": "middle",
        "width": "42px",
      }
    }
  >
    <input
      checked={false}
      css={
        {
          "display": "none",
        }
      }
      id="1"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      css={
        {
          "borderRadius": "20px",
          "cursor": "pointer",
          "display": "block",
          "margin": 0,
          "overflow": "hidden",
        }
      }
      htmlFor="1"
    >
      <span
        css={
          {
            "&:after": {
              "content": "" "",
              "paddingRight": "10px",
              "textAlign": "right",
            },
            "&:before": {
              "content": "" "",
              "paddingLeft": "10px",
            },
            "&:before, &:after": {
              "backgroundColor": "#d2d2d2",
              "boxSizing": "border-box",
              "display": "block",
              "float": "left",
              "height": "25px",
              "lineHeight": "25px",
              "padding": 0,
              "width": "50%",
            },
            "display": "block",
            "marginLeft": "-100%",
            "transition": "margin 0.1s ease-in 0s",
            "width": "200%",
          }
        }
      />
      <span
        css={
          {
            "background": "#fff",
            "borderRadius": "100%",
            "bottom": 0,
            "boxShadow": "0px 0px 2px -1px gray",
            "display": "block",
            "height": "23px",
            "margin": "1px",
            "opacity": undefined,
            "position": "absolute",
            "right": "17px",
            "top": 0,
            "transition": "all 0.15s ease-in 0s",
            "width": "23px",
          }
        }
      />
    </label>
  </div>
</div>
`;
